Add return to header and return to main page links

--- a/Recipes/lasagna.html
+++ b/Recipes/lasagna.html
@@ -34,5 +34,7 @@
         <li>Bake in preheated oven for 25 minutes. Remove foil, and bake an additional 25 minutes. Cool for 15 minutes before serving.
         </li>
     </ol>
+    <a href="#header">Return to top</a>
+    <a href="index.html">Return to Main Page</a>
 </body>
 </html>
