--- a/Recipes/pizza.html
+++ b/Recipes/pizza.html
@@ -40,6 +40,8 @@
         <li>Bake in preheated oven for 15-20 minutes, or until crust is golden brown and cheese is bubbly.</li>
         <li>Let cool for a few minutes before slicing and serving.</li>
     </ol>
+    <a href="#header">Return to top</a>
+    <a href="index.html">Return to Main Page</a>
 
 </body>
 </html>
