--- a/Recipes/tacos.html
+++ b/Recipes/tacos.html
@@ -9,7 +9,7 @@
     <h1>Tacos</h1>
     <img src="https://www.allrecipes.com/thmb/TqnV_BdSW8YXFospP97Ygz0rPJ8=/750x0/filters:no_upscale():max_bytes(150000):strip_icc()/7642593-ddf622cb835d49c49a64e32ed062b8a1.jpg" alt="Tacos">
     <p>Tacos are a delicious Mexican dish that is made with a crispy or soft shell, seasoned meat, and various toppings. They are a great meal to make for a special occasion or just for a cozy night in. Here is a simple recipe for tacos that you can try at home:</p>
-    <h2>Ingredients</h2>
+    <h2>Ingredients:</h2>
     <ul>
         <li>1 pound ground beef</li>
         <li>1 onion, chopped</li>
@@ -22,13 +22,15 @@
         <li>1/2 cup sour cream</li>
         <li>1/4 cup chopped fresh cilantro</li>
     </ul>
-    <h2>Instructions</h2>
+    <h2>Instructions:</h2>
     <ol>
         <li>In a large skillet, cook and stir ground beef until brown. Add onions and cook until onions are transparent. Stir in taco seasoning and refried beans. Heat until warm.</li>
         <li>Heat taco shells according to package instructions.</li>
         <li>Fill taco shells with meat mixture, cheese, lettuce, tomatoes, sour cream, and cilantro.</li>
         <li>Enjoy!</li>
     </ol>
+    <a href="#header">Return to top</a>
+    <a href="index.html">Return to Main Page</a>
 
 </body>
 </html>
