Fix links across all recipes

--- a/Recipes/pizza.html
+++ b/Recipes/pizza.html
@@ -41,7 +41,7 @@
         <li>Let cool for a few minutes before slicing and serving.</li>
     </ol>
     <a href="#header">Return to top</a>
-    <a href="index.html">Return to Main Page</a>
+    <a href="../index.html">Return to Main Page</a>
 
 </body>
 </html>
