--- a/Recipes/lasagna.html
+++ b/Recipes/lasagna.html
@@ -35,6 +35,6 @@
         </li>
     </ol>
     <a href="#header">Return to top</a>
-    <a href="index.html">Return to Main Page</a>
+    <a href="../index.html">Return to Main Page</a>
 </body>
 </html>
