--- a/Recipes/tacos.html
+++ b/Recipes/tacos.html
@@ -30,7 +30,7 @@
         <li>Enjoy!</li>
     </ol>
     <a href="#header">Return to top</a>
-    <a href="index.html">Return to Main Page</a>
+    <a href="../index.html">Return to Main Page</a>
 
 </body>
 </html>
