--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h1>Recipes</h1>
     <p>Here are all of the recipes:</p>
     <ul>
-        <li><a href="lasagna.html">Lasagna</a></li>
-        <li><a href="pizza.html">Pizza</a></li>
-        <li><a href="tacos.html">Tacos</a></li>
+        <li><a href="./lasagna.html">Lasagna</a></li>
+        <li><a href="./pizza.html">Pizza</a></li>
+        <li><a href="./tacos.html">Tacos</a></li>
 </body>
 </html>
