Correct links for header and return to main page

--- a/Recipes/pizza.html
+++ b/Recipes/pizza.html
@@ -6,7 +6,7 @@
     <title>Pizza</title>
 </head>
 <body>
-    <h1>Pizza</h1>
+    <h1 id="header">Pizza</h1>
     <img src="https://www.allrecipes.com/thmb/37zVRGd6QG9wiDoVXIWzx-PfKWw=/0x512/filters:no_upscale():max_bytes(150000):strip_icc()/ALR-20171-quick-and-easy-pizza-crust-VAT-4x3-2-229693959a224d749b062d4eb8983351.jpg" alt="Pizza">
     
     <p>Pizza is a delicious Italian dish that is made with a crust, tomato sauce, cheese, and various toppings. It is a great meal to make for a special occasion or just for a cozy night in. Here is a simple recipe for pizza that you can try at home:</p>
