--- a/Recipes/tacos.html
+++ b/Recipes/tacos.html
@@ -6,7 +6,7 @@
     <title>Tacos</title>
 </head>
 <body>
-    <h1>Tacos</h1>
+    <h1 id="header">Tacos</h1>
     <img src="https://www.allrecipes.com/thmb/TqnV_BdSW8YXFospP97Ygz0rPJ8=/750x0/filters:no_upscale():max_bytes(150000):strip_icc()/7642593-ddf622cb835d49c49a64e32ed062b8a1.jpg" alt="Tacos">
     <p>Tacos are a delicious Mexican dish that is made with a crispy or soft shell, seasoned meat, and various toppings. They are a great meal to make for a special occasion or just for a cozy night in. Here is a simple recipe for tacos that you can try at home:</p>
     <h2>Ingredients:</h2>
