--- a/Recipes/lasagna.html
+++ b/Recipes/lasagna.html
@@ -6,7 +6,7 @@
     <title>Lasagna</title>
 </head>
 <body>
-    <h1>Lasagna</h1>
+    <h1 id="header">Lasagna</h1>
     <img src="https://www.allrecipes.com/thmb/u3vCycnSWTzjQajFfIuZa8p8tM8=/750x0/filters:no_upscale():max_bytes(150000):strip_icc()/23600-worlds-best-lasagna-armag-4x3-1-b24f9ad518d74090bf197828492c64a6.jpg" alt="Lasagna">
     <p>Lasagna is a delicious Italian dish that is made with layers of pasta, cheese, and meat sauce. It is a great meal to make for a special occasion or just for a cozy night in. Here is a simple recipe for lasagna that you can try at home:</p>
     <h2>Ingredients:</h2>
